* Installed  Nugget Packages; * Implemented program class; * Implemented startup class; * Added initial folders; * Implemented app config; * Implemented EF Context; * Added more config settings to json; * Implemented LogService; * Implemented RemoteDataService; * Deleted default "WeatherForecastController" * Implemented Error Controller; * Implemented ExceptionLogging, ApplicationLogging, LoggingType Entities;

--- a/construction-brazil-server/construction-brazil-server/appsettings.json
+++ b/construction-brazil-server/construction-brazil-server/appsettings.json
@@ -1,9 +1,23 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Elasticsearch": {
+    // Dev
+    "Uri": "",
+    "Username": "",
+    "Password": "",
+    "TimeoutMinutes": 5
+  },
+  "StorageAccount": {
+    "ConnectionString": "",
+    "ContainerName": "documents"
+  },
+  "CorsPolicy": {
+    "TimeoutInMinutes":  15
+  }
 }
