--- a/construction-brazil-server/construction-brazil-server/appsettings.Development.json
+++ b/construction-brazil-server/construction-brazil-server/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Integrated Security=true;",
+    "ConnectionTimeout":  900
   }
 }
