--- a/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj
+++ b/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Static\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
