* Saving progress on Ddd initial repo/interface/controller created. Implemented Base Controller, and Dtos for static variables;

--- a/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj
+++ b/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\Static\" />
-    <Folder Include="Repositories\" />
+    <Folder Include="Dtos\Admin\" />
+    <Folder Include="Dtos\View\" />
   </ItemGroup>
 
 </Project>
