* Implemented Static Controllers, Repo, Interface; * Fixed BaseController constructor; * Commented out Swagger for now since it's causing errors;

--- a/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj
+++ b/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>construction_brazil_server</RootNamespace>
+    <StartupObject>Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
