* Added Database name to connection string for local; * Cleaned up Startup;

--- a/construction-brazil-server/construction-brazil-server/appsettings.Development.json
+++ b/construction-brazil-server/construction-brazil-server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Integrated Security=true;",
-    "ConnectionTimeout":  900
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=Dev_ConstructionBrazil;Integrated Security=true;",
+    "ConnectionTimeout": 900
   }
 }
