--- a/.github/workflows/main_constructionbrazilserverdev.yml
+++ b/.github/workflows/main_constructionbrazilserverdev.yml
@@ -23,18 +23,16 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
-        
-      - name: $(Build.SourcesDirectory)
+        run: dotnet build --configuration Release        
       
       - name: dotnet publish
-        run: dotnet publish -c Release -o $(Build.SourcesDirectory)/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj
+        run: dotnet publish -c Release -o $(Build.SourcesDirectory)\construction-brazil-server\construction-brazil-server\construction-brazil-server\construction-brazil-server.csproj
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
-          path: $(Build.SourcesDirectory)/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj
+          path: $(Build.SourcesDirectory)\construction-brazil-server\construction-brazil-server\construction-brazil-server\construction-brazil-server.csproj
 
   deploy:
     runs-on: ubuntu-latest
