--- a/construction-brazil-server/construction-brazil-server/Properties/launchSettings.json
+++ b/construction-brazil-server/construction-brazil-server/Properties/launchSettings.json
@@ -15,6 +15,12 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
