--- a/.github/workflows/main_constructionbrazilserverdev.yml
+++ b/.github/workflows/main_constructionbrazilserverdev.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release        
+        working-directory: /src
       
       - name: dotnet publish
         run: dotnet publish -c Release -o $(Build.SourcesDirectory)/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj
