--- a/.github/workflows/main_constructionbrazilserverdev.yml
+++ b/.github/workflows/main_constructionbrazilserverdev.yml
@@ -21,13 +21,17 @@ jobs:
         with:
           dotnet-version: '6.0.x'
           include-prerelease: true
-
+        
       - name: Build with dotnet
-        run: dotnet build --configuration Release
-      
-      - name: dotnet publish
-        run: dotnet publish -c Release -o /app/build
+        run: dotnet build construction-brazil-server.sln --configuration Release
 
+      - name: dotnet publish
+        run: dotnet publish construction-brazil-server.sln -c Release -o ${{env.DOTNET_ROOT}}/construction-brazil-server
+        
+      - name: Install dependencies
+        run: dotnet restore
+        working-directory: src/construction-brazil-server
+        
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
