--- a/.github/workflows/main_constructionbrazilserverdev.yml
+++ b/.github/workflows/main_constructionbrazilserverdev.yml
@@ -25,9 +25,9 @@ jobs:
           dotnet-version: '6.0.x'
           include-prerelease: true
         
-      - name: Install dependencies
-        run: dotnet restore
-        working-directory: src/construction-brazil-server
+        #- name: Install dependencies
+        # run: dotnet restore
+        #working-directory: src/construction-brazil-server
         
       - name: Build with dotnet
         run: dotnet build construction-brazil-server.sln --configuration Release
