--- a/.github/workflows/main_constructionbrazilserverdev.yml
+++ b/.github/workflows/main_constructionbrazilserverdev.yml
@@ -28,16 +28,16 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '6.0.x'
-          include-prerelease: true
+          include-prerelease: true      
         
-      #- name: Install dependencies
-      # run: dotnet restore      
+      - name: dotnet Restore
+        run: dotnet restore ${{env.DOTNET_ROOT}}/myapp
         
-      - name: dotnet Build and Publish
-        run: |
-          dotnet restore
-          dotnet build --configuration Release
-          dotnet publish -c Release --property:PublishDir='${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/construction-brazil-server' 
+      - name: dotnet Build
+        run: dotnet build --configuration Release ${{env.DOTNET_ROOT}}/myapp
+        
+      - name: dotnet Publish
+        run: dotnet publish -c Release --property:PublishDir='${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/construction-brazil-server' 
         
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
