--- a/.github/workflows/main_constructionbrazilserverdev.yml
+++ b/.github/workflows/main_constructionbrazilserverdev.yml
@@ -25,14 +25,17 @@ jobs:
         with:
           dotnet-version: '6.0.x'
           include-prerelease: true      
+          
+      - name: Testing
+        run: ls ${{env.DOTNET_ROOT}}
         
-      - name: dotnet Restore
+      - name: .NET Restore
         run: dotnet restore ${{env.DOTNET_ROOT}}/construction-brazil-server.csproj
         
-      - name: dotnet Build
+      - name: .NET Build
         run: dotnet build --configuration Release ${{env.DOTNET_ROOT}}/construction-brazil-server
         
-      - name: dotnet Publish
+      - name: .NET Publish
         run: dotnet publish -c Release --property:PublishDir='${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/construction-brazil-server' 
         
       - name: Upload artifact for deployment job
