--- a/.github/workflows/main_constructionbrazilserverdev.yml
+++ b/.github/workflows/main_constructionbrazilserverdev.yml
@@ -36,7 +36,7 @@ jobs:
         run: ls /home/runner/work/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server/bin/Release/net6.0
         
       - name: .NET Publish
-        run: dotnet publish -c Release -o /home/runner/work/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server/bin/Release/net6.0/construction-brazil-server
+        run: dotnet publish -c Release -o /home/runner/work/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server/bin/Release
         #run: dotnet publish -c Release --property:PublishDir='${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/construction-brazil-server'       
         
       - name: Upload artifact for deployment job
