--- a/.github/workflows/main_constructionbrazilserverdev.yml
+++ b/.github/workflows/main_constructionbrazilserverdev.yml
@@ -36,7 +36,7 @@ jobs:
         run: ls /home/runner/work/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server/bin/Release/net6.0
         
       - name: .NET Publish
-        run: dotnet publish -c Release -o /home/runner/work/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server/bin/Release/net6.0
+        run: dotnet publish -c Release -o /home/runner/work/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj
         
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
@@ -44,7 +44,7 @@ jobs:
           # Artifact name
           name: artifact
           # A file, directory or wildcard pattern that describes what to upload
-          path: /home/runner/work/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server/bin/Release/net6.0    
+          path: /home/runner/work/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj
           # The desired behavior if no files are found using the provided path.
                 
       #- name: Upload artifact for deployment job
