--- a/.github/workflows/main_constructionbrazilserverdev.yml
+++ b/.github/workflows/main_constructionbrazilserverdev.yml
@@ -31,12 +31,15 @@ jobs:
         
       - name: .NET Build
         run: dotnet build --configuration Release /home/runner/work/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server.sln      
-        
-      - name: .NET Publish
-        run: dotnet publish /home/runner/work/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj -c Release -o /app
+      
+      - name: Create Release Directory
+        run: mkdir /home/runner/Release/construction-brazil-server
         
       - name: Testing
-        run: ls /app
+        run: ls /home/runner/Release/construction-brazil-server
+        
+      - name: .NET Publish
+        run: dotnet publish /home/runner/work/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server/construction-brazil-server.csproj -c Release -o /home/runner/Release/construction-brazil-server
         
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
@@ -44,7 +47,7 @@ jobs:
           # Artifact name
           name: artifact
           # A file, directory or wildcard pattern that describes what to upload
-          path: /app/construction-brazil-server.csproj
+          path: /home/runner/Release/construction-brazil-server/construction-brazil-server.csproj
           # The desired behavior if no files are found using the provided path.
                 
       #- name: Upload artifact for deployment job
