--- a/.github/workflows/main_constructionbrazilserverdev.yml
+++ b/.github/workflows/main_constructionbrazilserverdev.yml
@@ -45,7 +45,7 @@ jobs:
         run: ls /home/runner/Release/construction-brazil-server
         
       - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v2
         with:
           # Artifact name
           name: artifact
@@ -70,7 +70,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: .net-app
+          name: artifact
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
