--- a/.github/workflows/main_constructionbrazilserverdev.yml
+++ b/.github/workflows/main_constructionbrazilserverdev.yml
@@ -50,7 +50,7 @@ jobs:
           # Artifact name
           name: artifact
           # A file, directory or wildcard pattern that describes what to upload
-          path: /home/runner/Release/construction-brazil-server/construction-brazil-server.dll
+          path: /home/runner/Release/construction-brazil-server
           # The desired behavior if no files are found using the provided path.                 
 
   deploy:
